<resources>
    <string name="app_name">HummerSystemsTestApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="text_city">Москва</string>
    <string name="btn_pizza">Пицца</string>
    <string name="btn_combo">Комбо</string>
    <string name="btn_deserts">Десерты</string>
    <string name="btn_drinks">Напитки</string>
    <string name="btn_burgers">Бургеры</string>
    <string name="btn_price">от 345 р</string>
    <string name="menu">Меню</string>
    <string name="profile">Профиль</string>
    <string name="basket">Корзина</string>


    <string-array name="cities">
        <item>Москва</item>
        <item>Санкт-Петербург</item>
        <item>Казань</item>
        <item>Новосибирск</item>
    </string-array>

</resources>