<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    >

    <com.example.hummersystemstestapp.CustomToolbar
        android:id="@+id/customToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/bannersRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_scrollFlags="scroll|enterAlways"
                tools:listitem="@layout/item_banner" />

            <HorizontalScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:scrollbars="none"
                app:tabGravity="fill">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:orientation="horizontal"
                    android:paddingTop="10dp">

                    <Button
                        android:layout_width="88dp"
                        android:layout_height="32dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/btn_pizza"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="10sp"
                        app:backgroundTint="@color/white" />

                    <Button
                        android:layout_width="88dp"
                        android:layout_height="32dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/btn_combo"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="10sp"
                        app:backgroundTint="@color/white" />

                    <Button
                        android:layout_width="88dp"
                        android:layout_height="32dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/btn_deserts"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="10sp"
                        app:backgroundTint="@color/white" />

                    <Button
                        android:layout_width="88dp"
                        android:layout_height="32dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/btn_drinks"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="10sp"
                        app:backgroundTint="@color/white" />

                    <Button
                        android:layout_width="88dp"
                        android:layout_height="32dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/btn_burgers"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="10sp"
                        app:backgroundTint="@color/white" />

                </LinearLayout>
            </HorizontalScrollView>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/productsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:nestedScrollingEnabled="true"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:listitem="@layout/item_food" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>


